--- a/DoAnMon/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/DoAnMon/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -38,14 +38,14 @@
 		position: relative;
 	}
 
-	.image-container img {
-		width: 100%;
-		height: 50vh;
-		position: absolute;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%);
-	}
+		.image-container img {
+			width: 100%;
+			height: 50vh;
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+		}
 
 	.profile-img .file {
 		position: relative;
@@ -58,70 +58,72 @@
 		background: #212529b8;
 	}
 
-	.profile-img .file input {
-		position: absolute;
-		opacity: 0;
-		right: 0;
-		top: 0;
-	}
+		.profile-img .file input {
+			position: absolute;
+			opacity: 0;
+			right: 0;
+			top: 0;
+		}
 </style>
+<div style="padding: 30px;border-radius: 50px;background-color: rgba(255, 255, 255, 0.5);backdrop-filter: blur(8px);">
+	<div style="background-color: transparent;backdrop-filter: none;">
+		<h3 style="text-align:center; margin-bottom: 20px;font-size: 34px;">@ViewData["Title"]</h3>
+		@* <partial name="_StatusMessage" for="StatusMessage" /> *@
+		<form id="profile-form" method="post" enctype="multipart/form-data">
+			<div class="container">
+				<div class="left-column">
+					<div class="profile-img">
+						<div class="image-container" id="image-container">
 
-<h3 style="text-align:center; margin-bottom: 20px;font-size: 34px;">@ViewData["Title"]</h3>
-<partial name="_StatusMessage" for="StatusMessage" />
-<form id="profile-form" method="post" enctype="multipart/form-data">
-	<div class="container">
-		<div class="left-column">
-			<div class="profile-img">
-				<div class="image-container" id="image-container">
+							<div class="image-container" id="image-container">
+								@if (string.IsNullOrEmpty(@Model.Input.ProfilePictureUrl))
+								{
+									<img id="selected-image" src="/Images/avatar.jpg" alt="No Image" />
+								}
+								else
+								{
+									<img id="selected-image" src="/Imgs_avtUser/@Model.Input.ProfilePictureUrl" alt="No Image" onerror="this.onerror=null; this.src='/Images/avatar.jpg';" />
 
-					<div class="image-container" id="image-container">
-						@if (string.IsNullOrEmpty(@Model.Input.ProfilePictureUrl))
-						{
-							<img id="selected-image" src="/Images/avatar.jpg" alt="No Image" />
-						}
-						else
-						{
-							<img id="selected-image" src="/Imgs_avtUser/@Model.Input.ProfilePictureUrl" alt="No Image" onerror="this.onerror=null; this.src='/Images/avatar.jpg';" />
-
-						}
+								}
+							</div>
+						</div>
+						<div class="file btn btn-lg btn-primary">
+							Change Photo
+							<input type="file" id="file-input" name="Input.ProfilePicture" onchange="previewImage()" />
+						</div>
 					</div>
 				</div>
-				<div class="file btn btn-lg btn-primary">
-					Change Photo
-					<input type="file" id="file-input" name="Input.ProfilePicture" onchange="previewImage()" />
+				<div class="right-column" id="right-column">
+					<div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+					<div class="form-group">
+						<label asp-for="Username">MSSV</label>
+						<input asp-for="Username" class="form-control" disabled />
+					</div>
+					<div class="form-group">
+						<label asp-for="Email">Email</label>
+						<input asp-for="Email" class="form-control" disabled />
+					</div>
+					<div class="form-group">
+						<label asp-for="Input.FullName">Họ và tên</label>
+						<input asp-for="Input.FullName" class="form-control" />
+						<span asp-validation-for="Input.FullName" class="text-danger"></span>
+					</div>
+					<div class="form-group">
+						<label asp-for="Input.DateOfBirth">Ngày sinh</label>
+						<input asp-for="Input.DateOfBirth" class="form-control" />
+						<span asp-validation-for="Input.DateOfBirth" class="text-danger"></span>
+					</div>
+					<div class="form-group" hidden>
+						<label asp-for="Input.ProfilePictureUrl"></label>
+						<input asp-for="Input.ProfilePictureUrl" class="form-control" />
+						<span asp-validation-for="Input.ProfilePictureUrl" class="text-danger"></span>
+					</div>
+					<button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
 				</div>
 			</div>
-		</div>
-		<div class="right-column" id="right-column">
-			<div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-			<div class="form-group">
-				<label asp-for="Username">MSSV</label>
-				<input asp-for="Username" class="form-control" disabled/>
-			</div>
-			<div class="form-group">
-				<label asp-for="Email">Email</label>
-				<input asp-for="Email" class="form-control" disabled/>
-			</div>
-			<div class="form-group">
-				<label asp-for="Input.FullName">Họ và tên</label>
-				<input asp-for="Input.FullName" class="form-control" />
-				<span asp-validation-for="Input.FullName" class="text-danger"></span>
-			</div>
-			<div class="form-group">
-				<label asp-for="Input.DateOfBirth">Ngày sinh</label>
-				<input asp-for="Input.DateOfBirth" class="form-control" />
-				<span asp-validation-for="Input.DateOfBirth" class="text-danger"></span>
-			</div>
-			<div class="form-group" hidden>
-				<label asp-for="Input.ProfilePictureUrl"></label>
-				<input asp-for="Input.ProfilePictureUrl" class="form-control" />
-				<span asp-validation-for="Input.ProfilePictureUrl" class="text-danger"></span>
-			</div>
-			<button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
-		</div>
+		</form>
 	</div>
-</form>
-
+</div>
 
 
 
