--- a/DoAnMon/Views/ClassRooms/_lecturePartial.cshtml
+++ b/DoAnMon/Views/ClassRooms/_lecturePartial.cshtml
@@ -4,7 +4,13 @@
     var lectures = Model != null ? Model.ToList() : new List<BaiGiang>();
     var totalCount = lectures.Count;
 }
-
+<style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" >
+</style>
 @if (totalCount > 0)
 {
     for (int i = totalCount - 1; i >= 0; i--)
@@ -22,6 +28,6 @@
 }
 else
 {
-    <h2>Chưa có bài nào được đăng lên</h2>
+    <h2 style="font-family: Poppins, sans-serif;">Chưa có bài nào được đăng lên</h2>
 }
 
