--- a/DoAnMon/Views/Shared/_Layout.cshtml
+++ b/DoAnMon/Views/Shared/_Layout.cshtml
@@ -4,31 +4,31 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - DoAnMon</title>
+	<title>@ViewData["Title"] - QUẢN LÝ PHÒNG HỌC TRỰC TUYẾN</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/DoAnMon.styles.css" asp-append-version="true" />
-	<link rel="icon" href="/pics/exam.ico" type="image/x-icon">
+	<link rel="icon" href="/images/Logo_Web.png" type="image/x-icon">
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow ">
+		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow " style="padding: 0">
 			<div class="container-fluid">
 
 				@if (User.Identity.IsAuthenticated)
 				{
-					<a class="navbar-brand" asp-area="" asp-controller="ClassRooms" asp-action="Index" style="font-family: 'Poppins', sans-serif">
-						<img src="/images/School.png" alt="Logo" width="35" height="auto">
-						ONLYA
+					<a class="navbar-brand" asp-area="" asp-controller="ClassRooms" asp-action="Index" style="font-family: 'Poppins', sans-serif; padding: 0">
+						<img src="/images/Logo_Web.png" alt="Logo" width="70" height="auto">
+						
 					</a>
 				}
 				else
 				{
-					<a class="navbar-brand" asp-area="Identity" asp-page="/Account/Index" style="font-family: 'Poppins', sans-serif">
-						<img src="/images/School.png" alt="Logo" width="35" height="auto">
-						ONLYA
+					<a class="navbar-brand" asp-area="Identity" asp-page="/Account/Index" style="font-family: 'Poppins', sans-serif; padding: 0">
+						<img src="/images/Logo_Web.png" alt="Logo" width="70" height="auto">
+						
 					</a>
 				}
 
