Down All bt của sv

--- a/DoAnMon/Views/ClassRooms/GetAllHomeWork.cshtml
+++ b/DoAnMon/Views/ClassRooms/GetAllHomeWork.cshtml
@@ -75,7 +75,7 @@
             @{
                 if (User.IsInRole("Teacher"))
                 {
-                    <a href="/ClassRooms/GetAllBTStu" class="button">Xem Bài tập</a>
+                    <a asp-action="GetAllBTStu" asp-controller="ClassRooms" asp-route-classid = "@item.ClassRoomId" asp-route-baitapID="@item.Id" class="button">Xem Bài tập</a>
                 }
                 else
                 {
